updateing all the changes which was partial

--- a/app/src/main/res/layout/form.xml
+++ b/app/src/main/res/layout/form.xml
@@ -3,28 +3,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+     <LinearLayout
+         android:layout_width="fill_parent"
+         android:layout_height="match_parent"
+         android:layout_marginTop="?attr/actionBarSize"
+         android:orientation="vertical"
+         android:paddingLeft="20dp"
+         android:paddingRight="20dp">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-    </com.google.android.material.appbar.AppBarLayout>
+         <!-- Text Label -->
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            android:text="Executive name"
+            android:layout_marginBottom="5dp"
+            />
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="60dp">
+        <!-- Spinner Element -->
+        <Spinner
+            android:id="@+id/exeName"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:prompt="@string/spinner_title"
+            />
+
+        <!-- Text Label -->
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            android:text="Customer type"
+            android:layout_marginBottom="5dp"
+            />
+
+        <!-- Spinner Element -->
+        <Spinner
+            android:id="@+id/custType"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:prompt="@string/spinner_title"
+            />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_name"
@@ -36,9 +55,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:hint="Name"
+                android:hint="CLIENT NAME*"
                 android:inputType="" />
         </com.google.android.material.textfield.TextInputLayout>
+
+
+
+        <!-- Text Label -->
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            android:text="Product Catogery*"
+            android:layout_marginBottom="5dp"
+            />
+
+        <!-- Spinner Element -->
+        <Spinner
+            android:id="@+id/pCatogery"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:prompt="@string/spinner_title"
+            />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_email"
@@ -49,39 +87,87 @@
                 android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Email" />
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+         <!--   <com.google.android.material.textfield.TextInputLayout
+              android:id="@+id/input_layout_phone"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"> -->
 
-            <EditText
-                android:id="@+id/input_phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Phone number" />
-        </com.google.android.material.textfield.TextInputLayout>
+              <EditText
+                  android:id="@+id/input_phone"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:hint="Phone number"
+                  android:inputType="phone"
+                  />
+              <EditText
+                  android:id="@+id/input_address"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:hint="Address"
+                  android:inputType="text"
+                  />
+         <!-- Text Label -->
+         <TextView
+             android:layout_width="fill_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dip"
+             android:text="Designation"
+             android:layout_marginBottom="5dp"
+             />
 
-        <CheckBox
-            android:id="@+id/input_checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="61dp"
-            android:text="I Agree to Contact Me"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView20" />
+         <!-- Spinner Element -->
+         <Spinner
+             android:id="@+id/designation"
+             android:layout_width="fill_parent"
+             android:layout_height="wrap_content"
+             android:prompt="@string/spinner_title"
+             />
+         <EditText
+             android:id="@+id/input_sOrder"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:hint="Sale Order Number"
+             android:inputType="text"
+             />
+         <EditText
+             android:id="@+id/input_brand"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:hint="Brand"
+             android:inputType="text"
+             />
+         <EditText
+             android:id="@+id/input_orderValue"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:hint="Order value"
+             android:inputType="text"
+             />
+         <EditText
+             android:id="@+id/input_nextAction"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:hint="Next Action"
+             android:inputType="text"
+             />
 
-        <Button android:id="@+id/btn_signup"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Submit"
-            android:background="@color/colorPrimary"
-            android:layout_marginTop="40dp"
-            android:textColor="@android:color/white"/>
 
-    </LinearLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+         <!--   </com.google.android.material.textfield.TextInputLayout>-->
+
+           <Button android:id="@+id/btn_signup"
+               android:layout_width="fill_parent"
+               android:layout_height="wrap_content"
+               android:text="Submit"
+               android:background="@color/colorPrimary"
+               android:layout_marginTop="40dp"
+               android:textColor="@android:color/white"/>
+
+       </LinearLayout>
+
+   </androidx.coordinatorlayout.widget.CoordinatorLayout>
