--- a/app/src/main/res/layout/form.xml
+++ b/app/src/main/res/layout/form.xml
@@ -3,164 +3,229 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/input_name"
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/input_layout_name"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/input_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="CUSTOMER NAME*"
+                    android:inputType=""
+                    android:singleLine="true" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!-- Text Label -->
+            <!--TextView
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:hint="CUSTOMER NAME*"
-                android:inputType=""
-                android:singleLine="true" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_marginTop="10dip"
+                android:layout_marginBottom="5dp"
+                android:text="Executive name" /-->
 
-        <!-- Text Label -->
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
-            android:layout_marginBottom="5dp"
-            android:text="Executive name" />
+            <!-- Spinner Element -->
+            <Spinner
+                android:id="@+id/exeName"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginBottom="5dp"
+                android:prompt="@string/spinner_title" />
 
-        <!-- Spinner Element -->
-        <Spinner
-            android:id="@+id/exeName"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/spinner_title" />
+            <!-- Text Label -->
+            <!--TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginBottom="5dp"
+                android:text="Customer type" /-->
 
-        <!-- Text Label -->
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
-            android:layout_marginBottom="5dp"
-            android:text="Customer type" />
-
-        <!-- Spinner Element -->
-        <Spinner
-            android:id="@+id/custType"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/spinner_title" />
+            <!-- Spinner Element -->
+            <Spinner
+                android:id="@+id/custType"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginBottom="5dp"
+                android:prompt="@string/spinner_title" />
 
 
+            <!-- Text Label -->
+            <!--TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginBottom="5dp"
+                android:text="Product Catogery*" /-->
 
+            <!-- Spinner Element -->
+            <Spinner
+                android:id="@+id/pCatogery"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginBottom="5dp"
+                android:prompt="@string/spinner_title" />
 
-        <!-- Text Label -->
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
-            android:layout_marginBottom="5dp"
-            android:text="Product Catogery*" />
-
-        <!-- Spinner Element -->
-        <Spinner
-            android:id="@+id/pCatogery"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/spinner_title" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_layout_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/input_email"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/input_layout_email"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Email"
-                android:inputType="textEmailAddress" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="wrap_content">
 
-        <!--   <com.google.android.material.textfield.TextInputLayout
+                <EditText
+                    android:id="@+id/input_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!--   <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/input_layout_phone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"> -->
 
-        <EditText
-            android:id="@+id/input_phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Phone number"
-            android:inputType="phone" />
+            <EditText
+                android:id="@+id/input_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Phone number"
+                android:inputType="phone" />
 
-        <EditText
-            android:id="@+id/input_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Address"
-            android:inputType="text" />
-        <!-- Text Label -->
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
-            android:layout_marginBottom="5dp"
-            android:text="Designation" />
+            <EditText
+                android:id="@+id/input_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Address"
+                android:inputType="text" />
+            <!-- Text Label -->
+            <!--TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginBottom="5dp"
+                android:text="Designation" /-->
 
-        <!-- Spinner Element -->
-        <Spinner
-            android:id="@+id/designation"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:prompt="@string/spinner_title" />
-
-
-        <EditText
-            android:id="@+id/input_sOrder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Sale Order Number"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/input_brand"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Brand"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/input_orderValue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Order value"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/input_nextAction"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Next Action"
-            android:inputType="text" />
+            <!-- Spinner Element -->
+            <Spinner
+                android:id="@+id/designation"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:prompt="@string/spinner_title" />
 
 
-        <!--   </com.google.android.material.textfield.TextInputLayout>-->
+            <EditText
+                android:id="@+id/input_sOrder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Sale Order Number"
+                android:inputType="text" />
 
-        <Button
-            android:id="@+id/btn_signup"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:background="@color/colorPrimary"
-            android:text="Submit"
-            android:textColor="@android:color/white" />
+            <!--TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginBottom="5dp"
+                android:text="Brand" /-->
 
-    </LinearLayout>
+            <!-- Spinner Element -->
+            <Spinner
+                android:id="@+id/pBrand"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dip"
+                android:layout_marginBottom="5dp"
+                android:prompt="@string/spinner_title" />
 
-   </androidx.coordinatorlayout.widget.CoordinatorLayout>
+            <EditText
+                android:id="@+id/input_orderValue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Order value"
+                android:inputType="text" />
+
+
+            <!--   </com.google.android.material.textfield.TextInputLayout>-->
+            <EditText
+                android:id="@+id/input_nextAction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Next Action"
+                android:inputType="text" />
+            <!--EditText
+                android:id="@+id/f__date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Follow up Date"
+                android:inputType="Date" /-->
+            <Button
+                android:id="@+id/btnDate"
+                android:layout_width="371dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@color/colorAccent"
+                android:padding="10dp"
+                android:text="Follow up date"
+                android:textColor="@android:color/white" />
+
+
+            <TextView
+                android:id="@+id/tvSelectedDate"
+                android:layout_width="373dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btnDate"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="30sp"
+                android:textStyle="italic|bold" />
+
+            <!--DatePicker
+                android:id="@+id/simpleDatePicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#150"
+                android:datePickerMode="spinner" />
+
+            <Button
+                android:id="@+id/submitButton"
+                android:layout_width="371dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@color/colorAccent"
+                android:padding="10dp"
+                android:text="Follow up date"
+                android:textColor="@android:color/white" /-->
+
+            <Button
+                android:id="@+id/btn_signup"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="100dp"
+                android:background="@color/colorPrimary"
+                android:text="Submit"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+
+
+    </ScrollView>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
