--- a/app/src/main/res/layout/form.xml
+++ b/app/src/main/res/layout/form.xml
@@ -12,6 +12,7 @@
             android:id="@+id/linearLayout"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:paddingLeft="20dp"
             android:paddingRight="20dp">
@@ -29,15 +30,6 @@
                     android:inputType=""
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
-
-           <!-- Spinner Element -->
-            <Spinner
-                android:id="@+id/exeName"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dip"
-                android:layout_marginBottom="5dp"
-                android:prompt="@string/spinner_title" />
 
             <!-- Spinner Element -->
             <Spinner
